src/objects/StudentCase__c.object
<CustomObject>
    <description>Object that will be visible/editable to students via some pages/interfaces.  Creation and manipulation of this object will trigger creation and manipulation of corresponding cases.  The existence of this object allows students to create and modify Salesforce cases without having visibility on them.</description>
    <fields>
        <fullName>CaseReference__c</fullName>
        <formula>&apos;ref:_&apos; + LEFT(Case__c, 4)  + &apos;0&apos; + RIGHT(Case__c, 5) + &apos;:ref&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>StudentCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Student Cases</relationshipLabel>
        <relationshipName>StudentCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Cases</relationshipLabel>
        <relationshipName>StudentCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinancialAid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Aid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstitutionName__c</fullName>
        <formula>StudentTransferInstitution__r.InstitutionName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institution Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentURL__c</fullName>
        <description>URL of the parent object</description>
        <label>Parent URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ServiceDescription__c</fullName>
        <label>Service Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>StudentCaseReason__c</fullName>
        <label>Student Case Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revision Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StudentEmail__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentTransferInstitution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Transfer Institution</label>
        <referenceTo>StudentTranscript__c</referenceTo>
        <relationshipLabel>Student Cases</relationshipLabel>
        <relationshipName>StudentCases_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransferEvaluation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer Evaluation</label>
        <referenceTo>TransferEvaluation__c</referenceTo>
        <relationshipLabel>Student Cases</relationshipLabel>
        <relationshipName>StudentCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StudentCaseReason__c</columns>
        <columns>Contact__c</columns>
        <columns>Case__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Student Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>